--- a/covidlab/todo.txt
+++ b/covidlab/todo.txt
@@ -1,12 +1,8 @@
-TODO: 
-    Summary file:
-        get access to results Folder
-            vprewb-users(\\pi11admin.virginia.edu) U:\PVR
-        - update to include info about 'total' column (non-tests, see last col of aggregation sheets), run.
+TODO:        
     Turnaround time:
         - Get access to health service folder
-        get bruce to rexport flagged emails
-        run my results, make plots (email out?)
+        - get bruce to rexport flagged emails
+        - run my results, make plots (email out?)
         get myself access to this email chain
         access gmail api to pull these email updates. 
         
@@ -19,6 +15,17 @@ Done:
     Excel mapings:
         - make macro that changes name from 384 plate to 94 plate format
         - sort for easier reading
-        
+
+   Summary file:
+        - adding/removing passwords on excel files
+        - pulls in data on personal laptop
+        - automate sending/recieving encrypted data with github
+        - makes results table (if add access to results on health desktop) else Faked
+        - combines into a summary table and writes to output file
+        - get access to results Folder
+            vprewb-users(\\pi11admin.virginia.edu) U:\PVR
+        - update to include info about 'total' column (non-tests, see last col of aggregation sheets), run.
+
+     
 Mapped both Research Office and Health Dir to Z drive?
 how to get health dir? (only on desktop? But got perm. to have on others?)
