--- a/covidlab/todo.txt
+++ b/covidlab/todo.txt
@@ -29,3 +29,37 @@ Done:
      
 Mapped both Research Office and Health Dir to Z drive?
 how to get health dir? (only on desktop? But got perm. to have on others?)
+
+#%%
+Dean Evasius Notes
+ex-NSA
+
+co's that do Ram's work (digital science[dimensions]; elsiver[sciVal])
+scival 
+    researh topics and clusters
+    see top institutions
+    eg. 
+    
+try to be data resource from grounds from VPR faculty, school deans, 
+type of Q:
+     collaberatoin networks (visuzliations for)
+        eg. 
+            subfield which good at, how to know better 
+            (like who, vis if faculty interact or bunch of lone wolfs)
+            Draw collaberation group, for past 5yrs DAG for how see how connected
+            Papers, citations, 
+            He'd suggest shorterm combined to long term: 
+                pick 2-3 subfields which good at, how to tell story and what means to be improved in
+                    eg. faculty hiring, (more strategic thean improveing average)
+                Sociological aspect of how collaberation works 
+                    speak w/ others
+            Ans: What decision will be made?
+                VPR, provost: what to invest in project & people
+
+A week or so
+Cheryl Wagner- physical office
+    
+Dean on Remote: adjusted, but misses unscheduled things
+
+Tools: extent to which want to use them (need requests ) ut balance vs principle first thinking
+    could design soup to nuts
